--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^16.0.0",
+    "@types/react": "^17.0.13",
+    "@types/react-dom": "^17.0.8",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "js-cookie": "^2.2.1",
@@ -15,6 +19,7 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-fast-compare": "^3.2.0",
     "react-redux": "^7.2.4",
     "react-resize-detector": "^6.7.3",
     "react-router": "^5.2.0",
@@ -22,6 +27,7 @@
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.0",
+    "typescript": "^4.3.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
