--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/d3-ease": "^3.0.0",
     "@types/jest": "^26.0.23",
     "@types/node": "^16.0.0",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "d3-ease": "^3.0.1",
     "js-cookie": "^2.2.1",
     "rc-switch": "^3.2.2",
     "react": "^17.0.2",
@@ -25,15 +27,17 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.2.3",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.0",
     "typescript": "^4.3.5",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "@craco/craco": "^6.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -55,7 +59,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.14.5",
     "@types/react-router-dom": "^5.1.7",
+    "@welldone-software/why-did-you-render": "^6.2.0",
+    "babel-preset-react-app": "^10.0.0",
     "redux-devtools-extension": "^2.13.9"
   }
 }
