--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.2.0",
     "@reduxjs/toolkit": "^1.6.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/d3-ease": "^3.0.0",
+    "@types/deep-equal": "^1.0.1",
     "@types/jest": "^26.0.23",
     "@types/node": "^16.0.0",
     "@types/react": "^17.0.13",
@@ -15,6 +17,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "d3-ease": "^3.0.1",
+    "deep-equal": "^2.0.5",
     "js-cookie": "^2.2.1",
     "rc-switch": "^3.2.2",
     "react": "^17.0.2",
@@ -31,8 +34,7 @@
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.0",
     "typescript": "^4.3.5",
-    "web-vitals": "^1.0.1",
-    "@craco/craco": "^6.2.0"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "craco start",
